--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -2,6 +2,22 @@
     width: auto !important;
 }
 
+.total {
+    font-size: 1.4em;
+    font-weight: 300;
+    text-align: center;
+    padding: 4px 6px;
+    margin: 5px 25px;
+    border: #6d6767 solid;
+    &:hover {
+        background: #f5f5f5;
+    }
+    span {
+        font-weight: bold;
+        font-size: 1.5em;
+    }
+}
+
 body {
     background: #e6ecf0;
 }
