--- a/src/components/audits/audits.html
+++ b/src/components/audits/audits.html
@@ -1,6 +1,27 @@
-<h3 ion-text text-center>Audits</h3>
-<div ion-row>
-    <ion-card ion-col col-12 text-center margin>A</ion-card>
-    <ion-card ion-col col-5 text-center margin>B</ion-card>
-    <ion-card ion-col col-6 text-center margin>C</ion-card>
+<h3 ion-text text-center>Etats</h3>
+<ion-row>
+    <ion-col>
+        <ion-item no-lines>
+            <ion-label class="oblige">Sélectionner l'entité</ion-label>
+            <ion-select [(ngModel)]="model.entity" name="entity" (ionChange)="onEntityChange()" required>
+                <ion-option value="produit">Produit</ion-option>
+                <ion-option value="client">Client</ion-option>
+                <ion-option value="comptes">Comptes</ion-option>
+                <ion-option value="recette">Recettes</ion-option>
+            </ion-select>
+        </ion-item>
+    </ion-col>
+    <ion-col>
+        <ion-item no-lines>
+            <ion-label class="oblige">Filtre</ion-label>
+            <ion-select [(ngModel)]="model.filtre" name="entity" (ionChange)="onFiltreChange()" required>
+                <ion-option [value]="item.code" *ngFor="let item of filtres">{{item.libelle}}</ion-option>
+            </ion-select>
+        </ion-item>
+    </ion-col>
+</ion-row>
+<div ion-row [hidden]="!model.filtre || !filtres?.length">
+    <ion-col col-12>
+        <iframe frameborder="0" #iframe style="height: 100%; width: 100%;"></iframe>
+    </ion-col>
 </div>
