--- a/src/components/depot-epargne/depot-epargne.html
+++ b/src/components/depot-epargne/depot-epargne.html
@@ -1,5 +1,8 @@
 <h4 ion-text text-center *ngIf="!compte"> La liste des depôts epargne</h4>
 <div class="table-wrapper">
+    <div class="total">
+        Total : <span>{{montant | currency:'XOF':true:'2.0'}}</span>
+    </div>
     <table>
         <thead>
             <tr>
@@ -38,13 +41,6 @@
                 <td>
 
                 </td>
-            </tr>
-            <tr margin-bottom padding-bottom>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td colspan="2">Total : {{montant | currency:'XOF':true:'2.0'}}</td>
-                <td></td>
             </tr>
         </tbody>
     </table>
