--- a/src/components/recettes/recettes.html
+++ b/src/components/recettes/recettes.html
@@ -1,5 +1,8 @@
 <h3 padding>Les recettes</h3>
 <div class="table-wrapper">
+    <div class="total">
+        Total: <span>{{montant | currency:'XOF':true:'2.0'}}</span>
+    </div>
     <table>
         <thead>
             <tr>
@@ -28,13 +31,6 @@
                 <td>
 
                 </td>
-            </tr>
-            <tr margin-bottom padding-bottom>
-                <td></td>
-                <td></td>
-                <td>Total: </td>
-                <td colspan="2" text-center>{{montant | currency:'XOF':true:'2.0'}}</td>
-                <td></td>
             </tr>
         </tbody>
     </table>
