--- a/src/components/retrait-epargne/retrait-epargne.html
+++ b/src/components/retrait-epargne/retrait-epargne.html
@@ -1,6 +1,9 @@
 <!-- Generated template for the RetraitEpargneComponent component -->
 <h4 ion-text text-center *ngIf="!compte"> La liste des retraits epargne</h4>
 <div class="table-wrapper">
+    <div class="total">
+        Total : <span>{{montant | currency:'XOF':true:'2.0'}}</span>
+    </div>
     <table>
         <thead>
             <tr>
@@ -31,13 +34,6 @@
                 <td>
 
                 </td>
-            </tr>
-            <tr margin-bottom padding-bottom>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td colspan="2">Total : {{montant | currency:'XOF':true:'2.0'}}</td>
-                <td></td>
             </tr>
         </tbody>
     </table>
