--- a/src/components/retrait-credit/retrait-credit.html
+++ b/src/components/retrait-credit/retrait-credit.html
@@ -1,5 +1,5 @@
 <!-- Generated template for the RetraitEpargneComponent component -->
-<h4 ion-text text-center *ngIf="!compte"> La liste des retraits epargne</h4>
+<h4 ion-text text-center *ngIf="!compte"> La liste des retraits du crédit</h4>
 <div class="table-wrapper">
     <div class="total">
         Total : <span>{{montant | currency:'XOF':true:'2.0'}}</span>
