--- a/src/components/client/client.html
+++ b/src/components/client/client.html
@@ -8,13 +8,11 @@
                 <th class="id">id</th>
                 <th>Date</th>
                 <th>Nom & prénoms</th>
-                <th>Num. carte</th>
                 <th>Quartier & maison</th>
                 <th>Téléphone</th>
                 <th>Profession</th>
-                <th>Activité</th>
                 <th>Lieu d'exercice</th>
-                <th>Email</th>
+                <th>Frais payé</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -29,13 +27,11 @@
                 <td class="id" style="width:100px">{{client.id}}</td>
                 <td>{{client.date | date:'dd/MM/yyyy'}}</td>
                 <td style="text-align:left">{{client.name}} {{client.firstName}}</td>
-                <td>{{client.numCarte}}</td>
                 <td>{{client.quartier}} {{client.maison}}</td>
                 <td>{{client.telephone}}</td>
                 <td>{{client.profession}}</td>
-                <td>{{client.activiteExerce}}</td>
                 <td>{{client.lieuExercice}}</td>
-                <td>{{client.email}}</td>
+                <td>{{client.fraisOuverture}}</td>
                 <td>
                     <ion-icon name="create" (click)="edit(client)" class="edit" *hasRessources="'tontine/api/clients/edit'"></ion-icon>
                     <ion-icon name="ios-close-outline" (click)="delete(client)" class="trash" *hasRessources="'tontine/api/clients/delete'"></ion-icon>
