--- a/src/components/create-credit/create-credit.html
+++ b/src/components/create-credit/create-credit.html
@@ -1,6 +1,9 @@
 <!-- Generated template for the CreateTontineComponent component -->
 <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm" padding>
-    <ion-list no-lines>
+    <ion-list>
+        <div *ngIf="credit.id" class="helper-error" text-right>
+            Le client doit d'abord payer les frais d'ouverture de compte, sinon le dossier sera bloqué au deblocage
+        </div>
       <!-- *ngIf="!credit.id"  -->
       <!--  [disabled]="credit.id" -->
         <ion-item padding-bottom>
@@ -12,16 +15,16 @@
         </ion-item>
         <ion-item *ngIf="credit.id" padding-bottom>
             --------------- Détail du Produit Crédit: <br>
-             Nbre Echéances: <strong><em>{{credit.produit?.nbreEcheance}}</em></strong> <br>
+             Nbre Echéances: <strong><em>{{credit.produit?.nbreEcheance}}</em></strong>
              Périodicité: <strong><em>{{credit.produit?.periodicite}}</em></strong>
             ---------------
         </ion-item>
         <ion-item *ngIf="!credit.id" padding-bottom (click)="openSearch()" style="cursor:pointer">
             <ion-label class="oblige">Selectionnez le client</ion-label>
-            <span item-end
-        *ngIf="dataProvider.userData.clients && dataProvider.userData.clients.length > 3">
-        {{client?.name}} {{client?.firstName}}
-      </span>
+        <span item-end *ngIf="dataProvider.userData.clients && dataProvider.userData.clients.length > 3">
+          {{client?.name}} {{client?.firstName}}
+        </span>
+
             <ion-select [(ngModel)]="credit.idClient" required name="client" [disabled]="credit.id" *ngIf="!dataProvider.userData.clients || dataProvider.userData.clients.length <= 3">
             <ion-option [value]="getSelected(clt)" *ngFor="let clt of dataProvider.userData.clients" [disabled]="credit.id"> {{clt.name}} {{clt.firstName}}</ion-option>
                 <ion-option value='' *ngIf="!dataProvider.userData.clients">Pas de clients</ion-option>
@@ -30,6 +33,7 @@
         <ion-item *ngIf="credit.id" padding-bottom>
             Nom client: <strong>{{credit.client?.name}} {{credit.client?.firstName}}</strong>
         </ion-item>
+
         <ion-item >
             <ion-label color="primary" stacked class="oblige">Montant demandé</ion-label>
             <ion-input type="text" required pattern="[0-9 ]+" [(ngModel)]="credit.montantDemande" name="montantDemande"></ion-input>
@@ -41,7 +45,6 @@
         <p *ngIf="credit.montantDemande && credit.montantDemande > +produit?.montantMax" class="helper-error" text-right>
             Le montant souscrit ne peut pas dépasser le montant maximum du produit ({{produit?.montantMax | currency:'XOF':true:'2.0'}})
         </p>
-
 
         <ion-item *ngIf="credit.id">
             <ion-label>Etat</ion-label>
@@ -56,5 +59,5 @@
     </ion-list>
     <button ion-button outline margin float-right [disabled]="editForm.form.invalid || isSaving || credit.montantDemande < +produit?.montantMin || credit.montantDemande > +produit?.montantMax">
         <ion-spinner *ngIf="isSaving"></ion-spinner>
-        {{this.credit.id?'Modifier compte':'Créer compte'}}</button>
+        {{this.credit.id?'Enrégistrer':'Créer compte'}}</button>
 </form>
