--- a/src/components/tontine/tontine.html
+++ b/src/components/tontine/tontine.html
@@ -27,6 +27,7 @@
                 <th>Montant souscrit</th>
                 <th>Mise</th>
                 <th>Avance</th>
+                <th>Mont.Avancé</th>
                 <th>Date avance</th>
                 <th class="hide">Montant adhesion</th>
                 <th>Date de clotûre</th>
@@ -47,6 +48,7 @@
                 <td>{{tontine.montantSouscritTontine?(tontine.montantSouscritTontine| currency:'XOF':true:'2.0'):'0'}}</td>
                 <td>{{tontine.miseTontine}}</td>
                 <td>{{tontine.avanceTontine?'Oui':'Non'}}</td>
+                <td>{{tontine.montantAvance}}</td>
                 <td>{{tontine.avanceDate?(tontine.avanceDate | date:'mediumDate'):''}}</td>
                 <td class="hide">{{tontine.montantAdhesion?(tontine.montantAdhesion| currency:'XOF':true:'2.0'):''}}</td>
                 <td>{{tontine.dateCloture | date:'mediumDate'}}</td>
