--- a/src/components/audits1/audits1.html
+++ b/src/components/audits1/audits1.html
@@ -27,10 +27,10 @@
                 <ion-option value="tontines_clotures">Tontines cloturés</ion-option>
                 <ion-option value="avances_effectuees">Avances effectuées</ion-option>
                 <ion-option value="frais_ouverture">Frais d'ouverture de Comptes</ion-option>
-                <ion-option value="depot_effectues">Dépots effectués</ion-option>
+                <ion-option value="depots_effectues">Dépots effectués</ion-option>
                 <ion-option value="retraits_effectues">Retraits effectués</ion-option>
-                <ion-option value="dossier_etude">Dossiers en Etude</ion-option>
-                <ion-option value="dossier_accordes">Dossiers Accordés</ion-option>
+                <ion-option value="dossiers_etude">Dossiers en Etude</ion-option>
+                <ion-option value="dossiers_accordes">Dossiers Accordés</ion-option>
                 <ion-option value="remboursements">Remboursements</ion-option>
                 <ion-option value="remboursements_attendus">Remboursements attendus</ion-option>
                 <ion-option value="mises_attendues">Mises attendues</ion-option>
